--- a/templates/home.html
+++ b/templates/home.html
@@ -2,4 +2,12 @@
 {% block content %}
 <h1>Hello, Sol!</h1>
 <img src="https://www.nasa.gov/sites/default/files/styles/946xvariable_height/public/images/756752main_20130620-m2.9flare-orig_full.jpg">
+<div>&nbsp;</div>
+<div>
+  <form action="/tags/" method="POST">
+    {{ form  }}
+    <input type="submit" value="submit">
+    {% csrf_token %} <!-- Required by Django forms targeting internal URLs -->
+  </form>
+</div>
 {% endblock %}
