--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{% block content %}
 <h1>A Uniquely World-Changing Super-Proprietary Way of Managing Tags</h1>
 <p>This is the only website ever designed that has at least one of the properties common to every other website ever designed.</p>
 <p>A highly respected source has said, "I'd rather use this site than use one of the best sites in the world!"'</p>
+{% endblock %}
